objects/Order_Refund_Credit__c.object
<CustomObject>
    <fields>
        <fullName>Third_Mattress_Pickup_Date_Time__c</fullName>
        <description>The third requested mattress pickup date and time</description>
        <inlineHelpText>The third requested mattress pickup date and time</inlineHelpText>
        <label>Third Mattress Pickup Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Debit_Amount__c</fullName>
        <description>The final amount to be charged to the customer</description>
        <formula>IF( NOT(ISNULL(Debit_Percentage__c)),(  Debit_Percentage__c  *  Amount_Charged__c ),  Debit_Amount__c )</formula>
        <inlineHelpText>The final amount to be charged to the customer</inlineHelpText>
        <label>Total Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ORC_Amount__c</fullName>
        <description>Total ORC amount including both refund and appeasements</description>
        <formula>CC_Amount_Refund__c + Final_Gift_Card_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ORC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Gift_Card__c</fullName>
        <description>The type of gift card being given to the customer.</description>
        <label>Type of Gift Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <description>Universal Product Code</description>
        <inlineHelpText>Universal Product Code</inlineHelpText>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_the_Mattress_was_Purchased__c</fullName>
        <label>Where the Mattress was Purchased</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>In-Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>The Zip/Postal Code from the Order&apos;s Billing Address</description>
        <inlineHelpText>The Zip/Postal Code from the Order&apos;s Billing Address</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Refund/Credit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_ORC</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Case_Owner_Role__c</columns>
        <columns>Case_Owner_Profile__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Reason__c</columns>
        <columns>ORC_Status__c</columns>
        <columns>Status_in_OMS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORC_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open ORC</label>
    </listViews>
    <nameField>
        <displayFormat>ORC-{0000000}</displayFormat>
        <label>Order Refund/Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Refunds/Credits</pluralLabel>
    <recordTypes>
        <fullName>Debit_Category</fullName>
        <active>true</active>
        <description>Record type used to display fields to charge the customer</description>
        <label>Debit Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Card</fullName>
        <active>true</active>
        <label>Gift Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mattress_Return</fullName>
        <active>true</active>
        <description>Record Type used to display fields relevant to Mattress Returns</description>
        <label>Mattress Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>Price_Adjustment</fullName>
        <active>true</active>
        <label>Price Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shipping</fullName>
        <active>true</active>
        <label>Shipping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Price_Override_Reason</fullName>
        <active>true</active>
        <description>Must select price override reason if a price override amount is entered.</description>
        <errorConditionFormula>ispickval( Reason__c ,&quot;Price Override&quot;) &amp;&amp;   isblank(Text(Price_Override_Reason__c))</errorConditionFormula>
        <errorDisplayField>Price_Override_Reason__c</errorDisplayField>
        <errorMessage>Must select a Price Override Reason (Error ORC-01)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Agent_Cant_Approve_ORCs</fullName>
        <active>true</active>
        <description>Validation Rule prevents ORC Status from being changed to &apos;Closed&apos; by HBC Support Agents.</description>
        <errorConditionFormula>ISPICKVAL( ORC_Status__c , &apos;Approved&apos;) &amp;&amp;
ISCHANGED(ORC_Status__c ) &amp;&amp;
NOT(OR(
(CONTAINS($Profile.Name, &apos;Service Excellence Agent&apos;)),
(CONTAINS($Profile.Name, &apos;Executive Services&apos;)),
(CONTAINS($Profile.Name, &apos;Support Management&apos;)),
(CONTAINS($Profile.Name, &apos;Support Team Lead&apos;)),
(CONTAINS($Profile.Name, &apos;Administrator&apos;))
))</errorConditionFormula>
        <errorDisplayField>ORC_Status__c</errorDisplayField>
        <errorMessage>Only the Service Excellence Team is allowed to approve ORC&apos;s (Error ORC-03)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Agent_Cant_Close_ORCs</fullName>
        <active>true</active>
        <description>Validation Rule prevents ORC Status from being changed to &apos;Closed&apos; by HBC Support Agents.</description>
        <errorConditionFormula>( ISPICKVAL( ORC_Status__c , &apos;Closed&apos;) ) &amp;&amp;(CONTAINS($Profile.Name, &apos;Support Agent&apos;))</errorConditionFormula>
        <errorDisplayField>ORC_Status__c</errorDisplayField>
        <errorMessage>Only the POS Team is allowed to close ORC&apos;s once they have been processed (Error ORC-02)</errorMessage>
    </validationRules>
</CustomObject>